# repo-triage

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: portfolio.yaml
data/ledger/: runs.jsonl
decisions/: DEC-0001-bundled-v0.1-release.md
docs/: METHODOLOGY.md  first-pr.md  system-map.md
repo_triage/: 2026-M07.md  cli.py  ledger.py  report.py  score.py
rules/: v0.md
schemas/: memo.schema.json  scoring.schema.json
scoring/2026-M07/: baz-experiment.md  cdcp-control-plane.md  compose-canvas.md  context-archeologist.md  dream-replay-cli.md  drift-canary.md  foo-bar-old.md  grid-silicon.md  memo-archive.md  memory-graph-ng.md  notebook-forge.md  owl-eval-bench.md  prompt-quilt.md  quiet-audit.md  quux-prototype.md  retro-claim.md  shadow-reviewer.md  signal-broker.md  spec-ledger-template.md  token-cartography.md
scripts/: enforce_counts.py  render_memo.py  rubric_pinned.py  score_template.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/repo_triage/: __init__.py  __main__.py  cli.py  memo.py  portfolio.py  rubric.py  scoring.py
tests/: conftest.py  test_cli_smoke.py  test_enforce_counts.py  test_portfolio.py  test_render_memo.py  test_rubric.py  test_rubric_pinned.py  test_score_template.py  test_validate_schemas.py  test_voice_lint.py
tests/fixtures/: portfolio_min.yaml
